tests/tests_mod/ui/field_macro_err.stderr
error: expected either an untyped numeric literal or an identifier
 --> tests/tests_mod/ui/field_macro_err.rs:4:24
  |
4 |     let _: field_name!("hello");
  |                        ^^^^^^^
  |
  = note: this error originates in the macro `field_name` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected either an untyped numeric literal or an identifier
 --> tests/tests_mod/ui/field_macro_err.rs:5:24
  |
5 |     let _: field_name!(0x100);
  |                        ^^^^^
  |
  = note: this error originates in the macro `field_name` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected either an untyped numeric literal or an identifier
 --> tests/tests_mod/ui/field_macro_err.rs:6:24
  |
6 |     let _: field_name!(-1);
  |                        ^
  |
  = note: this error originates in the macro `field_name` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected either an untyped numeric literal or an identifier
 --> tests/tests_mod/ui/field_macro_err.rs:7:24
  |
7 |     let _: field_name!(10usize);
  |                        ^^^^^^^
  |
  = note: this error originates in the macro `field_name` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected field name after this
  --> tests/tests_mod/ui/field_macro_err.rs:11:43
   |
11 |     multiconst::field_name_aliases! { foo = }
   |                                           ^
   |
   = note: this error originates in the macro `multiconst::field_name_aliases` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected either an untyped numeric literal or an identifier
  --> tests/tests_mod/ui/field_macro_err.rs:12:45
   |
12 |     multiconst::field_name_aliases! { foo = "bar" }
   |                                             ^^^^^
   |
   = note: this error originates in the macro `multiconst::field_name_aliases` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected an identifier
  --> tests/tests_mod/ui/field_macro_err.rs:13:39
   |
13 |     multiconst::field_name_aliases! { "foo" }
   |                                       ^^^^^
   |
   = note: this error originates in the macro `multiconst::field_name_aliases` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected a `,`
  --> tests/tests_mod/ui/field_macro_err.rs:14:49
   |
14 |     multiconst::field_name_aliases! { foo = bar baz }
   |                                                 ^^^
   |
   = note: this error originates in the macro `multiconst::field_name_aliases` (in Nightly builds, run with -Z macro-backtrace for more info)
